updated profile setup and profile pages to have updated HMTL images for avatars

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -80,7 +80,7 @@
                                 <input type="radio" name="avatar" id="mario" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/mario.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -92,7 +92,7 @@
                                 <input type="radio" name="avatar" id="luigi" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/luigi.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/luigi.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -104,7 +104,7 @@
                                 <input type="radio" name="avatar" id="yoshi" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/yoshi.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/yoshi.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -116,7 +116,7 @@
                                 <input type="radio" name="avatar" id="toad" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/toad.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/toad.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -128,7 +128,7 @@
                                 <input type="radio" name="avatar" id="peach" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/peach.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/peach.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -140,7 +140,7 @@
                                 <input type="radio" name="avatar" id="daisy" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/daisy.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/daisy.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -152,7 +152,7 @@
                                 <input type="radio" name="avatar" id="donkey-kong" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/donkey-kong.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/donkey-kong.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -164,7 +164,7 @@
                                 <input type="radio" name="avatar" id="toadette" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/toadette.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/toadette.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -176,7 +176,7 @@
                                 <input type="radio" name="avatar" id="bowser" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/bowser.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/bowser.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -188,7 +188,7 @@
                                 <input type="radio" name="avatar" id="wario" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/wario.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/wario.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -200,7 +200,7 @@
                                 <input type="radio" name="avatar" id="boo" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/boo.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/boo.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
@@ -212,7 +212,7 @@
                                 <input type="radio" name="avatar" id="koopa-troopa" />
                                 <figure>
                                     <img
-                                        src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/koopa-troopa.png"
+                                        src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/koopa-troopa.png"
                                         alt=""
                                         class="avatar-imgs"
                                         draggable="false"
