--- a/profile-setup/index.html
+++ b/profile-setup/index.html
@@ -89,11 +89,8 @@
                             <input type="radio" name="avatar" id="luigi" />
                             <figure>
                                 <img
-                                    src="https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/luigi.png"
-                                    alt=""
-                                    class="avatar-imgs"
-                                    draggable="false"
-                                />
+                                src=https://rwbjopjlvkaogcdsnhcg.supabase.co/storage/v1/object/public/avatars/luigi.png
+                                alt="" class="avatar-imgs" draggable="false" />
                                 <figcaption>Luigi</figcaption>
                             </figure>
                         </label>
